--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/ui-pro": "^0.7.4"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.1.3",
     "autoprefixer": "^10.4.17",
     "nuxt": "^3.10.0",
     "nuxt-aos": "^1.2.2",
