--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@iconify-json/simple-icons": "^1.1.90",
-    "@nuxt/content": "^2.11.0",
-    "@nuxt/image": "^1.3.0",
-    "@nuxt/ui-pro": "^0.7.4"
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/image": "^1.9.0",
+    "@nuxt/ui-pro": "^3.0.0",
+    "nuxt": "^3.16.0",
+    "nuxt-aos": "^1.2.5"
   },
   "devDependencies": {
-    "@nuxtjs/google-fonts": "^3.1.3",
-    "autoprefixer": "^10.4.17",
-    "nuxt": "^3.11.0",
-    "nuxt-aos": "^1.2.2",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@iconify-json/fa-solid": "^1.2.1",
+    "@iconify-json/lucide": "^1.2.32",
+    "@nuxt/eslint": "^1.2.0",
+    "eslint": "^9.22.0",
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   }
 }
